# sistemas-distribuidos

./: .gitignore  README.md
exercicio-1/: README.md  client.go  exercicio-1  go.mod  go.sum  server.go  shell.nix
testes-trabalho/: README.md  pyproject.toml  shell.nix
testes-trabalho/testes_trabalho/: client.py  server.py  video.py
trabalho-1/: README.md  pyproject.toml  requirements.txt
trabalho-1/trabalho-1/: __main__.py  application.py  client.py  server.py  ui.py
trabalho-1/trabalho_1/: application.py  audio_capture.py  audio_player.py  client.py  main.py  server.py  ui.py  video_capture.py
trabalho-2/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  notes.md  pyproject.toml  requirements.txt
trabalho-2/monitoring/grafana/dashboards/: Products.json
trabalho-2/monitoring/prometheus/: prometheus.yml
trabalho-2/trabalho-2/: common.py  consumer.py  distributor.py  distributor2.py  factory_line1.py  factory_line2.py  supplier.py
zeromq-guide/go/: go.mod  main.go  zeromq-guide
zeromq-guide/python/: shell.nix
